Fixed how jsXe installs on Unix/Linux; Added support for desktop launchers in Unix